k8s-manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: passphoria-depl
  name: passphoria-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: passphoria-depl
  type: ClusterIP
