k8s-manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: passphoria-ing
spec:
  ingressClassName: nginx
  rules:
  - host: passphoria.xammaops.win
    http:
      paths:
      - backend:
          service:
            name: passphoria-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - passphoria.xammaops.win
    secretName: passphoria-tls
